# OCCT-wok

./: .gitattributes  .gitignore  building_WOK_with_vc.txt  collect_binary.bat  collect_binary.sh  collect_binary_without_libs.bat  collect_binary_without_libs.sh
adm/: UDLIST
src/CDLFront/: CDL.lex  CDL.tab.c  CDL.tab.h  CDL.yacc  CDLFront.cxx  CDLFront_CMPLRS.edl  CDLFront_Replace.tcl  CDLFront_WOKSteps.edl  FILES  cdl_defines.hxx  cdl_rules.h
src/CPPClient/: CPPClient.cxx  CPPClient_Enum.cxx  CPPClient_General.edl  CPPClient_MPV.cxx  CPPClient_Package.cxx  CPPClient_Template.edl  CPPClient_Transient.cxx  FILES
src/CPPExt/: CPPExt.cxx  CPPExt.hxx  CPPExt_Alias.cxx  CPPExt_Define.hxx  CPPExt_Enum.cxx  CPPExt_Exception.cxx  CPPExt_MPV.cxx  CPPExt_Package.cxx  CPPExt_PersistentCSFDB.cxx  CPPExt_PersistentOBJS.cxx  CPPExt_PersistentOBJY.cxx  CPPExt_Pointer.cxx  CPPExt_Standard.edl  CPPExt_Storable.cxx  CPPExt_Template.edl  CPPExt_TemplateCSFDB.edl  CPPExt_TemplateOBJS.edl  CPPExt_TemplateOBJY.edl  CPPExt_Transient.cxx  FILES
src/CPPIntExt/: CPPIntExt.cxx  CPPIntExt_Body.cxx  CPPIntExt_Case.cxx  CPPIntExt_Ccl.cxx  CPPIntExt_EInit.cxx  CPPIntExt_Load.cxx  Engine_Template.edl  FILES  Interface_Template.edl
src/CPPJini/: CPPJini.cdl  CPPJini.cxx  CPPJini.hxx  CPPJini_ClientInfo.cdl  CPPJini_ClientInfo.cxx  CPPJini_ClientInfo.lxx  CPPJini_Define.hxx  CPPJini_Enum.cxx  CPPJini_General.edl  CPPJini_MPV.cxx  CPPJini_Package.cxx  CPPJini_Template.edl  CPPJini_Transient.cxx  FILES
src/CSFDBSchema/: CSFDBSchema.cxx  CSFDBSchema_Template.edl  FILES
src/EDL/: EDL.cdl  EDL.cxx  EDL.lex  EDL.yacc  EDL_API.cxx  EDL_CMPLRS.edl  EDL_Interpretor.cdl  EDL_Interpretor.cxx  EDL_Library.cxx  EDL_Replace.tcl  EDL_Template.cxx  EDL_WOKSteps.edl  FILES  edl_rule.h
src/GraphTools/: GraphTools_ReducedGraph.cdl
src/IDLFront/: FILES  IDL.lex  IDL.yacc  IDLFront.cxx  IDLFront_CMPLRS.edl  IDLFront_Replace.tcl  IDLFront_WOKSteps.edl  idl_rules.h
src/MS/: MS.cdl  MS.cxx  MS_Class.cdl  MS_Class.cxx  MS_Client.cdl  MS_Client.cxx  MS_Common.cxx  MS_Enum.cdl  MS_Enum.cxx  MS_Error.cdl  MS_Error.cxx  MS_ExternMet.cdl  MS_ExternMet.cxx  MS_Field.cxx  MS_GenClass.cdl  MS_GenClass.cxx  MS_GenType.cxx  MS_Imported.cdl  MS_Imported.cxx  MS_InstClass.cdl  MS_InstClass.cxx  MS_InstMet.cxx  MS_MemberMet.cdl  MS_MemberMet.cxx  MS_MetaSchema.cxx  MS_Method.cdl  MS_Method.cxx  MS_Package.cdl  MS_Package.cxx  MS_Param.cxx  MS_ParamWithValue.cxx  MS_Pointer.cdl  MS_PrimType.cxx  MS_Schema.cdl  MS_Schema.cxx  MS_StdClass.cdl  MS_StdClass.cxx  MS_Type.cxx
src/MSAPI/: MSAPI_Class.cxx  MSAPI_ExternMet.cxx  MSAPI_GenClass.cxx  MSAPI_InstClass.cxx  MSAPI_MemberMet.cxx  MSAPI_MetaSchema.cxx  MSAPI_Method.cxx  MSAPI_Package.cxx  MSAPI_Schema.cxx  MSAPI_StdClass.cxx
src/TCPPExt/: FILES  TCPPExt.cxx  TCPPExt.hxx  TCPPExt_MethodTemplate.edl
src/TKCDLFront/: Makefile.am  Makefile.in
src/TKCPPClient/: FILES  Makefile.am  Makefile.in
src/TKCPPExt/: Makefile.am  Makefile.in
src/TKCPPIntExt/: Makefile.am  Makefile.in
src/TKCPPJini/: FILES  Makefile.am  Makefile.in
src/TKCSFDBSchema/: Makefile.am  Makefile.in
src/TKIDLFront/: EXTERNLIB  Makefile.am  Makefile.in
src/TKTCPPExt/: Makefile.am  Makefile.in
src/TKWOK/: EXTERNLIB  FILES  Makefile.am  Makefile.in  PACKAGES  TKWOK_LINKSHR.edl
src/TKWOKTcl/: EXTERNLIB  Makefile.am  Makefile.in
src/VAS/: FILES  Products.tcl  VAS.tcl  WOK.tcl
src/WOKAPI/: FILES  WOKAPI_BuildProcess.cxx  WOKAPI_Command.cxx  WOKAPI_Command_Factory.cxx  WOKAPI_Command_Parcel.cxx  WOKAPI_Command_TriggeredMake.cxx  WOKAPI_Command_Unit.cxx  WOKAPI_Command_Warehouse.cxx  WOKAPI_Command_Workbench.cxx  WOKAPI_Command_Workshop.cxx  WOKAPI_Entity.cdl  WOKAPI_Entity.cxx  WOKAPI_Entity.lxx  WOKAPI_Factory.cxx  WOKAPI_MakeOption.cxx  WOKAPI_MakeStep.cxx  WOKAPI_Parcel.cxx  WOKAPI_Process.cxx  WOKAPI_Session.cdl  WOKAPI_Session.cxx  WOKAPI_Unit.cxx  WOKAPI_Warehouse.cxx  WOKAPI_Workbench.cxx  WOKAPI_Workshop.cxx
src/WOKBuilder/: FILES  WOKBuilder.cdl  WOKBuilder_ArchiveExtract.cxx  WOKBuilder_Archiver.cxx  WOKBuilder_CodeGenerator.cxx  WOKBuilder_CodeGeneratorIterator.cxx  WOKBuilder_Command.cxx  WOKBuilder_Compiler.cdl  WOKBuilder_Compiler.cxx  WOKBuilder_CompilerIterator.cdl  WOKBuilder_CompilerIterator.cxx  WOKBuilder_DLLinker.cxx  WOKBuilder_EXELinker.cxx  WOKBuilder_Entity.lxx  WOKBuilder_ExecutableLinker.cxx  WOKBuilder_Linker.cxx  WOKBuilder_MSAction.cxx  WOKBuilder_MSAction.lxx  WOKBuilder_MSActionID.lxx  WOKBuilder_MSClientExtractor.cxx  WOKBuilder_MSEntity.lxx  WOKBuilder_MSExtractor.cxx  WOKBuilder_MSExtractorIterator.cxx  WOKBuilder_MSHeaderExtractor.cdl  WOKBuilder_MSHeaderExtractor.cxx  WOKBuilder_MSJiniExtractor.cxx  WOKBuilder_MSTranslator.cdl  WOKBuilder_MSTranslator.cxx  WOKBuilder_MSTranslatorIterator.cdl  WOKBuilder_MSTranslatorIterator.cxx  WOKBuilder_MSchema.cxx  WOKBuilder_MSchema.lxx  WOKBuilder_Tool.lxx  WOKBuilder_ToolInProcess.cdl  WOKBuilder_ToolInProcess.cxx  WOKBuilder_ToolInShell.cxx  WOKBuilder_ToolInShellIterator.cdl  WOKBuilder_ToolInShellIterator.cxx  WOKBuilder_WNTCollector.cxx
src/WOKBuilderDef/: CDLTranslate.edl  CMPLRS.edl  CMPLRS_AIX.edl  CMPLRS_BSD.edl  CMPLRS_HP.edl  CMPLRS_LIN.edl  CMPLRS_MAC.edl  CMPLRS_SIL.edl  CMPLRS_SUN.edl  CMPLRS_WNT.edl  CMPLRS_wnt.awk  CODEGEN.edl  COMMAND.edl  CPP.edl  CPPCLIENT.edl  CPPENG.edl  CPPINT.edl  CPPJINI.edl  CSF.edl  CSFDBSCHEMA.edl  CSF_AIX.edl  CSF_AO1.edl  CSF_BSD.edl  CSF_HP.edl  CSF_LIN.edl  CSF_MAC.edl  CSF_SIL.edl  CSF_SUN.edl  CSF_WNT.edl  (+11 more)
src/WOKLibs/: EXTERNLIB  FILES  Makefile.am  Makefile.in  TOOLKITS  WOKLibs.cdl  WOKLibs_CMPLRS.edl  WOKLibs_LINKSHR.edl  mscmd.cxx  mscmd.dsp  pkgIndex.tcl  wokcmd.cxx  wokcmd.dsp  wokdeliverysteps.dsp  wokdfltsteps.dsp  wokobjssteps.dsp  wokorbixsteps.dsp  woksteps.cxx  woksteps.dsp  woktoolscmd.cxx  woktoolscmd.dsp  wokutilscmd.cxx  wokutilscmd.dsp
src/WOKSH/: EXTERNLIB  FILES  Makefile.am  Makefile.in  WOKSH.cdl  WOKSH_CMPLRS.edl  WOKSH_LD.edl  WOKSH_LDEXE.edl  WOKSH_LDSHR.edl  WOKSH_LINKSHR.edl  wokprocess.csh  wokprocess.cxx  wokprocess.dsp  woksh.cxx  woksh.dsp
(+480 files in other folders)
