# Makefile.am for Open Cascade toolkit TKWOK
srcdir = @srcdir@

VPATH = @srcdir@ : \
@top_srcdir@/drv/EDL : @top_srcdir@/src/EDL: \
@top_srcdir@/drv/MS : @top_srcdir@/src/MS: \
@top_srcdir@/drv/WOKAPI : @top_srcdir@/src/WOKAPI: \
@top_srcdir@/drv/WOKBuilder : @top_srcdir@/src/WOKBuilder: \
@top_srcdir@/drv/WOKDFLT : @top_srcdir@/src/WOKDFLT: \
@top_srcdir@/drv/WOKDeliv : @top_srcdir@/src/WOKDeliv: \
@top_srcdir@/drv/WOKMake : @top_srcdir@/src/WOKMake: \
@top_srcdir@/drv/WOKOBJS : @top_srcdir@/src/WOKOBJS: \
@top_srcdir@/drv/WOKOrbix : @top_srcdir@/src/WOKOrbix: \
@top_srcdir@/drv/WOKStep : @top_srcdir@/src/WOKStep: \
@top_srcdir@/drv/WOKTools : @top_srcdir@/src/WOKTools: \
@top_srcdir@/drv/WOKUnix : @top_srcdir@/src/WOKUnix: \
@top_srcdir@/drv/WOKUtils : @top_srcdir@/src/WOKUtils: \
@top_srcdir@/drv/WOKernel : @top_srcdir@/src/WOKernel: \
@top_srcdir@/drv/WOKNT : @top_srcdir@/src/WOKNT


INCLUDES =  \
-I@top_srcdir@/inc \
-I@top_srcdir@/drv/EDL \
-I@top_srcdir@/drv/MS \
-I@top_srcdir@/drv/WOKAPI \
-I@top_srcdir@/drv/WOKBuilder \
-I@top_srcdir@/drv/WOKDFLT \
-I@top_srcdir@/drv/WOKDeliv \
-I@top_srcdir@/drv/WOKMake \
-I@top_srcdir@/drv/WOKOBJS \
-I@top_srcdir@/drv/WOKOrbix \
-I@top_srcdir@/drv/WOKStep \
-I@top_srcdir@/drv/WOKTools \
-I@top_srcdir@/drv/WOKUnix \
-I@top_srcdir@/drv/WOKUtils \
-I@top_srcdir@/drv/WOKernel \
-I@top_srcdir@/drv/WOKNT


lib_LTLIBRARIES=libTKWOK.la

libTKWOK_la_LIBADD = \
../TKernel/libTKernel.la


libTKWOK_la_SOURCES = \
DELIVERY.tab.c \
EDL.cxx \
EDL.tab.c \
EDL.tab.c \
EDL_API.cxx \
EDL_DataMapIteratorOfMapOfFile_0.cxx \
EDL_DataMapIteratorOfMapOfLibrary_0.cxx \
EDL_DataMapIteratorOfMapOfTemplate_0.cxx \
EDL_DataMapIteratorOfMapOfVariable_0.cxx \
EDL_DataMapNodeOfMapOfFile_0.cxx \
EDL_DataMapNodeOfMapOfLibrary_0.cxx \
EDL_DataMapNodeOfMapOfTemplate_0.cxx \
EDL_DataMapNodeOfMapOfVariable_0.cxx \
EDL_File.cxx \
EDL_HSequenceOfVariable_0.cxx \
EDL_Interpretor.cxx \
EDL_Library.cxx \
EDL_MapOfFile_0.cxx \
EDL_MapOfLibrary_0.cxx \
EDL_MapOfTemplate_0.cxx \
EDL_MapOfVariable_0.cxx \
EDL_SequenceNodeOfSequenceOfVariable_0.cxx \
EDL_SequenceOfVariable_0.cxx \
EDL_StackIteratorOfStackOfBoolean_0.cxx \
EDL_StackNodeOfStackOfBoolean_0.cxx \
EDL_StackOfBoolean_0.cxx \
EDL_Template.cxx \
EDL_Variable.cxx \
MS.cxx \
MS_Alias.cxx \
MS_Array1OfParam_0.cxx \
MS_Class.cxx \
MS_ClassMet.cxx \
MS_Client.cxx \
MS_Common.cxx \
MS_Component.cxx \
MS_Construc.cxx \
MS_DataMapIteratorOfMapOfGlobalEntity_0.cxx \
MS_DataMapIteratorOfMapOfMethod_0.cxx \
MS_DataMapIteratorOfMapOfType_0.cxx \
MS_Engine.cxx \
MS_Enum.cxx \
MS_Error.cxx \
MS_Exec.cxx \
MS_ExecFile.cxx \
MS_ExecPart.cxx \
MS_Executable.cxx \
MS_ExternMet.cxx \
MS_Field.cxx \
MS_GenClass.cxx \
MS_GenType.cxx \
MS_GlobalEntity.cxx \
MS_HArray1OfParam_0.cxx \
MS_HSequenceOfClass_0.cxx \
MS_HSequenceOfComponent_0.cxx \
MS_HSequenceOfEngine_0.cxx \
MS_HSequenceOfError_0.cxx \
MS_HSequenceOfExecFile_0.cxx \
MS_HSequenceOfExecPart_0.cxx \
MS_HSequenceOfExecutable_0.cxx \
MS_HSequenceOfExternMet_0.cxx \
MS_HSequenceOfField_0.cxx \
MS_HSequenceOfGenClass_0.cxx \
MS_HSequenceOfGenType_0.cxx \
MS_HSequenceOfGlobalEntity_0.cxx \
MS_HSequenceOfInstClass_0.cxx \
MS_HSequenceOfInterface_0.cxx \
MS_HSequenceOfMemberMet_0.cxx \
MS_HSequenceOfMethod_0.cxx \
MS_HSequenceOfPackage_0.cxx \
MS_HSequenceOfParam_0.cxx \
MS_HSequenceOfSchema_0.cxx \
MS_HSequenceOfType_0.cxx \
MS_Imported.cxx \
MS_InstClass.cxx \
MS_InstMet.cxx \
MS_Interface.cxx \
MS_MapOfGlobalEntity_0.cxx \
MS_MapOfMethod_0.cxx \
MS_MapOfType_0.cxx \
MS_MemberMet.cxx \
MS_MetaSchema.cxx \
MS_Method.cxx \
MS_NatType.cxx \
MS_Package.cxx \
MS_Param.cxx \
MS_ParamWithValue.cxx \
MS_Pointer.cxx \
MS_PrimType.cxx \
MS_Schema.cxx \
MS_SequenceNodeOfSequenceOfClass_0.cxx \
MS_SequenceNodeOfSequenceOfComponent_0.cxx \
MS_SequenceNodeOfSequenceOfEngine_0.cxx \
MS_SequenceNodeOfSequenceOfError_0.cxx \
MS_SequenceNodeOfSequenceOfExecFile_0.cxx \
MS_SequenceNodeOfSequenceOfExecPart_0.cxx \
MS_SequenceNodeOfSequenceOfExecutable_0.cxx \
MS_SequenceNodeOfSequenceOfExternMet_0.cxx \
MS_SequenceNodeOfSequenceOfField_0.cxx \
MS_SequenceNodeOfSequenceOfGenClass_0.cxx \
MS_SequenceNodeOfSequenceOfGenType_0.cxx \
MS_SequenceNodeOfSequenceOfGlobalEntity_0.cxx \
MS_SequenceNodeOfSequenceOfInstClass_0.cxx \
MS_SequenceNodeOfSequenceOfInterface_0.cxx \
MS_SequenceNodeOfSequenceOfMemberMet_0.cxx \
MS_SequenceNodeOfSequenceOfMethod_0.cxx \
MS_SequenceNodeOfSequenceOfPackage_0.cxx \
MS_SequenceNodeOfSequenceOfParam_0.cxx \
MS_SequenceNodeOfSequenceOfSchema_0.cxx \
MS_SequenceNodeOfSequenceOfType_0.cxx \
MS_SequenceOfClass_0.cxx \
MS_SequenceOfComponent_0.cxx \
MS_SequenceOfEngine_0.cxx \
MS_SequenceOfError_0.cxx \
MS_SequenceOfExecFile_0.cxx \
MS_SequenceOfExecPart_0.cxx \
MS_SequenceOfExecutable_0.cxx \
MS_SequenceOfExternMet_0.cxx \
MS_SequenceOfField_0.cxx \
MS_SequenceOfGenClass_0.cxx \
MS_SequenceOfGenType_0.cxx \
MS_SequenceOfGlobalEntity_0.cxx \
MS_SequenceOfInstClass_0.cxx \
MS_SequenceOfInterface_0.cxx \
MS_SequenceOfMemberMet_0.cxx \
MS_SequenceOfMethod_0.cxx \
MS_SequenceOfPackage_0.cxx \
MS_SequenceOfParam_0.cxx \
MS_SequenceOfSchema_0.cxx \
MS_SequenceOfType_0.cxx \
MS_StdClass.cxx \
MS_TraductionError_0.cxx \
MS_Type.cxx \
WOKAPI_BuildProcess.cxx \
WOKAPI_Command.cxx \
WOKAPI_Command_Factory.cxx \
WOKAPI_Command_Parcel.cxx \
WOKAPI_Command_TriggeredMake.cxx \
WOKAPI_Command_Unit.cxx \
WOKAPI_Command_Warehouse.cxx \
WOKAPI_Command_Workbench.cxx \
WOKAPI_Command_Workshop.cxx \
WOKAPI_Entity.cxx \
WOKAPI_Factory.cxx \
WOKAPI_File.cxx \
WOKAPI_Locator.cxx \
WOKAPI_MakeOption.cxx \
WOKAPI_MakeStep.cxx \
WOKAPI_Parcel.cxx \
WOKAPI_Process.cxx \
WOKAPI_SequenceNodeOfSequenceOfEntity_0.cxx \
WOKAPI_SequenceNodeOfSequenceOfFactory_0.cxx \
WOKAPI_SequenceNodeOfSequenceOfFile_0.cxx \
WOKAPI_SequenceNodeOfSequenceOfMakeOption_0.cxx \
WOKAPI_SequenceNodeOfSequenceOfMakeStep_0.cxx \
WOKAPI_SequenceNodeOfSequenceOfParcel_0.cxx \
WOKAPI_SequenceNodeOfSequenceOfUnit_0.cxx \
WOKAPI_SequenceNodeOfSequenceOfWorkbench_0.cxx \
WOKAPI_SequenceNodeOfSequenceOfWorkshop_0.cxx \
WOKAPI_SequenceOfEntity_0.cxx \
WOKAPI_SequenceOfFactory_0.cxx \
WOKAPI_SequenceOfFile_0.cxx \
WOKAPI_SequenceOfMakeOption_0.cxx \
WOKAPI_SequenceOfMakeStep_0.cxx \
WOKAPI_SequenceOfParcel_0.cxx \
WOKAPI_SequenceOfUnit_0.cxx \
WOKAPI_SequenceOfWorkbench_0.cxx \
WOKAPI_SequenceOfWorkshop_0.cxx \
WOKAPI_Session.cxx \
WOKAPI_Unit.cxx \
WOKAPI_Warehouse.cxx \
WOKAPI_Workbench.cxx \
WOKAPI_Workshop.cxx \
WOKBuilder_ArchiveExtract.cxx \
WOKBuilder_ArchiveLibrary.cxx \
WOKBuilder_Archiver.cxx \
WOKBuilder_CDLFile.cxx \
WOKBuilder_CodeGenFile.cxx \
WOKBuilder_CodeGenerator.cxx \
WOKBuilder_CodeGeneratorIterator.cxx \
WOKBuilder_Command.cxx \
WOKBuilder_Compilable.cxx \
WOKBuilder_Compiler.cxx \
WOKBuilder_CompilerIterator.cxx \
WOKBuilder_CompressedFile.cxx \
WOKBuilder_DEFile.cxx \
WOKBuilder_DLLFile.cxx \
WOKBuilder_DLLinker.cxx \
WOKBuilder_DataMapIteratorOfDataMapOfHAsciiStringOfMSEntity_0.cxx \
WOKBuilder_DataMapIteratorOfDataMapOfHAsciiStringOfToolInShell_0.cxx \
WOKBuilder_DataMapIteratorOfDataMapOfMSActionIDOfMSAction_0.cxx \
WOKBuilder_DataMapOfHAsciiStringOfMSEntity_0.cxx \
WOKBuilder_DataMapOfHAsciiStringOfToolInShell_0.cxx \
WOKBuilder_DataMapOfMSActionIDOfMSAction_0.cxx \
WOKBuilder_EXEFile.cxx \
WOKBuilder_EXELinker.cxx \
WOKBuilder_Entity.cxx \
WOKBuilder_EntityHasher.cxx \
WOKBuilder_Executable.cxx \
WOKBuilder_ExecutableLinker.cxx \
WOKBuilder_ExportLibrary.cxx \
WOKBuilder_HSequenceOfEntity_0.cxx \
WOKBuilder_HSequenceOfExtension_0.cxx \
WOKBuilder_HSequenceOfLibrary_0.cxx \
WOKBuilder_HSequenceOfObjectFile_0.cxx \
WOKBuilder_HSequenceOfToolInShell_0.cxx \
WOKBuilder_ImportLibrarian.cxx \
WOKBuilder_ImportLibrary.cxx \
WOKBuilder_Include.cxx \
WOKBuilder_Library.cxx \
WOKBuilder_Linker.cxx \
WOKBuilder_MFile.cxx \
WOKBuilder_MSAction.cxx \
WOKBuilder_MSActionID.cxx \
WOKBuilder_MSClientExtractor.cxx \
WOKBuilder_MSEngineExtractor.cxx \
WOKBuilder_MSEntity.cxx \
WOKBuilder_MSEntityHasher.cxx \
WOKBuilder_MSExtractor.cxx \
WOKBuilder_MSExtractorIterator.cxx \
WOKBuilder_MSHeaderExtractor.cxx \
WOKBuilder_MSJiniExtractor.cxx \
WOKBuilder_MSServerExtractor.cxx \
WOKBuilder_MSTemplateExtractor.cxx \
WOKBuilder_MSTool.cxx \
WOKBuilder_MSTranslator.cxx \
WOKBuilder_MSTranslatorIterator.cxx \
WOKBuilder_MSchema.cxx \
WOKBuilder_MapIteratorOfMapOfMSAction_0.cxx \
WOKBuilder_MapOfMSAction_0.cxx \
WOKBuilder_Miscellaneous.cxx \
WOKBuilder_ObjectFile.cxx \
WOKBuilder_PDBFile.cxx \
WOKBuilder_QueueNodeOfQueueOfMSAction_0.cxx \
WOKBuilder_QueueOfMSAction_0.cxx \
WOKBuilder_SequenceNodeOfSequenceOfEntity_0.cxx \
WOKBuilder_SequenceNodeOfSequenceOfExtension_0.cxx \
WOKBuilder_SequenceNodeOfSequenceOfLibrary_0.cxx \
WOKBuilder_SequenceNodeOfSequenceOfObjectFile_0.cxx \
WOKBuilder_SequenceNodeOfSequenceOfToolInShell_0.cxx \
WOKBuilder_SequenceOfEntity_0.cxx \
WOKBuilder_SequenceOfExtension_0.cxx \
WOKBuilder_SequenceOfLibrary_0.cxx \
WOKBuilder_SequenceOfObjectFile_0.cxx \
WOKBuilder_SequenceOfToolInShell_0.cxx \
WOKBuilder_SharedLibrary.cxx \
WOKBuilder_SharedLinker.cxx \
WOKBuilder_Specification.cxx \
WOKBuilder_StaticLibrarian.cxx \
WOKBuilder_StaticLibrary.cxx \
WOKBuilder_TarFile.cxx \
WOKBuilder_Tool.cxx \
WOKBuilder_ToolInProcess.cxx \
WOKBuilder_ToolInShell.cxx \
WOKBuilder_ToolInShellIterator.cxx \
WOKBuilder_WNTCollector.cxx \
WOKBuilder_WNTLibrarian.cxx \
WOKBuilder_WNTLinker.cxx \
WOKDFLT_DFLTExtract.cxx \
WOKDFLT_MSDFLTExtractor.cxx \
WOKDeliv_DataMapIteratorOfDataMapOfFiles_0.cxx \
WOKDeliv_DataMapIteratorOfDataMapOfParcel_0.cxx \
WOKDeliv_DataMapOfFiles_0.cxx \
WOKDeliv_DataMapOfParcel_0.cxx \
WOKDeliv_DelivBuildArchive.cxx \
WOKDeliv_DelivBuildExec.cxx \
WOKDeliv_DelivBuildSource.cxx \
WOKDeliv_DeliveryArchive.cxx \
WOKDeliv_DeliveryBase.cxx \
WOKDeliv_DeliveryCopy.cxx \
WOKDeliv_DeliveryDATA.cxx \
WOKDeliv_DeliveryExecList.cxx \
WOKDeliv_DeliveryFiles.cxx \
WOKDeliv_DeliveryGET.cxx \
WOKDeliv_DeliveryLIB.cxx \
WOKDeliv_DeliveryList.cxx \
WOKDeliv_DeliveryListShared.cxx \
WOKDeliv_DeliveryMetaStep.cxx \
WOKDeliv_DeliveryOBJSSchema.cxx \
WOKDeliv_DeliverySOURCES.cxx \
WOKDeliv_DeliverySTUBClient.cxx \
WOKDeliv_DeliveryShared.cxx \
WOKDeliv_DeliverySource.cxx \
WOKDeliv_DeliveryStep.cxx \
WOKDeliv_DeliveryStepList.cxx \
WOKDeliv_ParseDelivery.cxx \
WOKMake_BuildProcess.cxx \
WOKMake_BuildProcessGroup.cxx \
WOKMake_BuildProcessIterator.cxx \
WOKMake_DataMapIteratorOfDataMapOfHAsciiStringOfDevUnit_0.cxx \
WOKMake_DataMapIteratorOfDataMapOfHAsciiStringOfSequenceOfHAsciiString_0.cxx \
WOKMake_DataMapIteratorOfDataMapOfHAsciiStringOfStepBuilder_0.cxx \
WOKMake_DataMapIteratorOfDataMapOfHAsciiStringOfStep_0.cxx \
WOKMake_DataMapOfHAsciiStringOfDevUnit_0.cxx \
WOKMake_DataMapOfHAsciiStringOfSequenceOfHAsciiString_0.cxx \
WOKMake_DataMapOfHAsciiStringOfStepBuilder_0.cxx \
WOKMake_DataMapOfHAsciiStringOfStep_0.cxx \
WOKMake_DepItem.cxx \
WOKMake_DepItemHasher.cxx \
WOKMake_HSequenceOfInputFile_0.cxx \
WOKMake_HSequenceOfOutputFile_0.cxx \
WOKMake_HSequenceOfStepOption_0.cxx \
WOKMake_IndexedDataMapOfBuildProcessGroup_0.cxx \
WOKMake_IndexedDataMapOfHAsciiStringOfInputFile_0.cxx \
WOKMake_IndexedDataMapOfHAsciiStringOfOutputFile_0.cxx \
WOKMake_IndexedMapOfDepItem_0.cxx \
WOKMake_InputFile.cxx \
WOKMake_MetaStep.cxx \
WOKMake_OutputFile.cxx \
WOKMake_SequenceNodeOfSequenceOfInputFile_0.cxx \
WOKMake_SequenceNodeOfSequenceOfOutputFile_0.cxx \
WOKMake_SequenceNodeOfSequenceOfStepOption_0.cxx \
WOKMake_SequenceOfInputFile_0.cxx \
WOKMake_SequenceOfOutputFile_0.cxx \
WOKMake_SequenceOfStepOption_0.cxx \
WOKMake_Step.cxx \
WOKMake_StepBuilder.cxx \
WOKMake_StepFile.cxx \
WOKMake_Step_1.cxx \
WOKMake_TriggerStep.cxx \
WOKNT.cxx \
WOKNT_AdmFile.cxx \
WOKNT_Array1OfRegExp_0.cxx \
WOKNT_Array1OfString_0.cxx \
WOKNT_CompareOfString.cxx \
WOKNT_CopyIfCh.c \
WOKNT_MixedOutput.cxx \
WOKNT_OutErrOutput.cxx \
WOKNT_Path.cxx \
WOKNT_PathIterator.cxx \
WOKNT_PrivCompareOfString_0.cxx \
WOKNT_QuickSortOfString_0.cxx \
WOKNT_RegExp.cxx \
WOKNT_ReplIfCh.c \
WOKNT_ReplIfChWith.c \
WOKNT_SequenceNodeOfSequenceOfShell_0.cxx \
WOKNT_SequenceOfShell_0.cxx \
WOKNT_Shell.cxx \
WOKNT_ShellManager.cxx \
WOKNT_ShellOutput.cxx \
WOKNT_Shell_1.cxx \
WOKNT_StackIteratorOfStackOfHandle_0.cxx \
WOKNT_StackNodeOfStackOfHandle_0.cxx \
WOKNT_StackOfHandle_0.cxx \
WOKNT_chmod.cxx \
WOKNT_cmp.c \
WOKNT_cp.cxx \
WOKNT_mv.cxx \
WOKNT_regexp_1.c \
WOKNT_rm.cxx \
WOKOBJS_AppSchCxxFile.cxx \
WOKOBJS_AppSchema.cxx \
WOKOBJS_EngLinkList.cxx \
WOKOBJS_LibSchema.cxx \
WOKOBJS_MSSchExtractor.cxx \
WOKOBJS_OSSG.cxx \
WOKOBJS_SchExtract.cxx \
WOKOBJS_SchGen.cxx \
WOKOrbix_DataMapIteratorOfDataMapOfHAsciiStringOfHAsciiString_0.cxx \
WOKOrbix_DataMapOfHAsciiStringOfHAsciiString_0.cxx \
WOKOrbix_ExtractServerList.cxx \
WOKOrbix_IDLCompile.cxx \
WOKOrbix_IDLCompiler.cxx \
WOKOrbix_IDLCompilerIterator.cxx \
WOKOrbix_IDLFile.cxx \
WOKOrbix_IDLFill.cxx \
WOKOrbix_IDLSource.cxx \
WOKOrbix_IDLSourceExtract.cxx \
WOKOrbix_IDLTranslator.cxx \
WOKOrbix_ServerSource.cxx \
WOKStep_ArchiveLibrary.cxx \
WOKStep_CDLUnitSource.cxx \
WOKStep_ClientExtract.cxx \
WOKStep_CodeGenerate.cxx \
WOKStep_Compile.cxx \
WOKStep_ComputeLinkList.cxx \
WOKStep_DLLink.cxx \
WOKStep_DirectLinkList.cxx \
WOKStep_DirectTKReplace.cxx \
WOKStep_DynamicLibrary.cxx \
WOKStep_EXELink.cxx \
WOKStep_EngDatFiles.cxx \
WOKStep_EngLDFile.cxx \
WOKStep_EngLinkList.cxx \
WOKStep_EngineExtract.cxx \
WOKStep_ExecLink.cxx \
WOKStep_ExecutableSource.cxx \
WOKStep_Extract.cxx \
WOKStep_ExtractExecList.cxx \
WOKStep_HeaderExtract.cxx \
WOKStep_ImplementationDep.cxx \
WOKStep_ImportLibrary.cxx \
WOKStep_Include.cxx \
WOKStep_JiniExtract.cxx \
WOKStep_LibExtract.cxx \
WOKStep_LibLimit.cxx \
WOKStep_LibLink.cxx \
WOKStep_LibUnCompress.cxx \
WOKStep_Library.cxx \
WOKStep_Link.cxx \
WOKStep_LinkList.cxx \
WOKStep_MSFill.cxx \
WOKStep_MSStep.cxx \
WOKStep_ProcessStep.cxx \
WOKStep_ResourceSource.cxx \
WOKStep_ServerExtract.cxx \
WOKStep_Source.cxx \
WOKStep_SourceExtract.cxx \
WOKStep_StaticLibrary.cxx \
WOKStep_TKList.cxx \
WOKStep_TKReplace.cxx \
WOKStep_TemplateExtract.cxx \
WOKStep_ToolkitSource.cxx \
WOKStep_TransitiveLinkList.cxx \
WOKStep_TransitiveTKReplace.cxx \
WOKStep_WNTCollect.cxx \
WOKStep_WNTK.cxx \
WOKStep_WNTLibrary.cxx \
WOKStep_WNTLink.cxx \
WOKTools_Array1OfHAsciiString_0.cxx \
WOKTools_AsciiStringHasher.cxx \
WOKTools_BasicMap.cxx \
WOKTools_BasicMapIterator.cxx \
WOKTools_CStringHasher.cxx \
WOKTools_ChDirValue.cxx \
WOKTools_CompareOfHAsciiString.cxx \
WOKTools_DataMapIteratorOfDataMapOfHAsciiStringOfHAsciiString_0.cxx \
WOKTools_DataMapIteratorOfDataMapOfHAsciiStringOfHSequenceOfHAsciiString_0.cxx \
WOKTools_DataMapOfHAsciiStringOfHAsciiString_0.cxx \
WOKTools_DataMapOfHAsciiStringOfHSequenceOfHAsciiString_0.cxx \
WOKTools_Define.cxx \
WOKTools_EnvValue.cxx \
WOKTools_Error.cxx \
WOKTools_HAsciiStringHasher.cxx \
WOKTools_HSequenceOfBoolean_0.cxx \
WOKTools_HSequenceOfDefine_0.cxx \
WOKTools_HSequenceOfReturnValue_0.cxx \
WOKTools_IndexedDataMapOfHAsciiString_0.cxx \
WOKTools_IndexedMapOfHAsciiString_0.cxx \
WOKTools_Info.cxx \
WOKTools_InterpFileValue.cxx \
WOKTools_MapIteratorOfMapOfHAsciiString_0.cxx \
WOKTools_MapOfHAsciiString_0.cxx \
WOKTools_Message.cxx \
WOKTools_Options.cxx \
WOKTools_PUsage.cxx \
WOKTools_Return.cxx \
WOKTools_ReturnValue.cxx \
WOKTools_SequenceNodeOfSequenceOfBoolean_0.cxx \
WOKTools_SequenceNodeOfSequenceOfDefine_0.cxx \
WOKTools_SequenceNodeOfSequenceOfReturnValue_0.cxx \
WOKTools_SequenceOfBoolean_0.cxx \
WOKTools_SequenceOfDefine_0.cxx \
WOKTools_SequenceOfReturnValue_0.cxx \
WOKTools_SortOfHAsciiString_0.cxx \
WOKTools_StringValue.cxx \
WOKTools_Verbose.cxx \
WOKTools_Warning.cxx \
WOKUnix.cxx \
WOKUnix_ASyncStatus.cxx \
WOKUnix_AdmFile.cxx \
WOKUnix_Buffer.cxx \
WOKUnix_BufferOverflow_0.cxx \
WOKUnix_CantBlockBuffer.cxx \
WOKUnix_DumbOutput.cxx \
WOKUnix_DumpScript.cxx \
WOKUnix_FDescr.cxx \
WOKUnix_FileBuffer.cxx \
WOKUnix_MixedOutput.cxx \
WOKUnix_NoBuffer.cxx \
WOKUnix_OutErrOutput.cxx \
WOKUnix_Path.cxx \
WOKUnix_PathIterator.cxx \
WOKUnix_Process.cxx \
WOKUnix_ProcessManager.cxx \
WOKUnix_ProcessOutput.cxx \
WOKUnix_ProcessTimeOut_0.cxx \
WOKUnix_RegExp.cxx \
WOKUnix_RemoteShell.cxx \
WOKUnix_SequenceNodeOfSequenceOfProcess_0.cxx \
WOKUnix_SequenceOfProcess_0.cxx \
WOKUnix_Shell.cxx \
WOKUnix_ShellManager.cxx \
WOKUnix_ShellStatus.cxx \
WOKUnix_Signal.cxx \
WOKUnix_StackIteratorOfStackOfDir_0.cxx \
WOKUnix_StackNodeOfStackOfDir_0.cxx \
WOKUnix_StackOfDir_0.cxx \
WOKUnix_SyncStatus.cxx \
WOKUnix_regexp_1.c \
WOKUtils_BufferOverflow_0.cxx \
WOKUtils_HSequenceOfParamItem_0.cxx \
WOKUtils_HSequenceOfPath_0.cxx \
WOKUtils_MapIteratorOfMapOfPath_0.cxx \
WOKUtils_MapOfPath_0.cxx \
WOKUtils_Param.cxx \
WOKUtils_ParamItem.cxx \
WOKUtils_Path.cxx \
WOKUtils_PathHasher.cxx \
WOKUtils_PathIterator.cxx \
WOKUtils_ProcessTimeOut_0.cxx \
WOKUtils_RegExp.cxx \
WOKUtils_RemoteShell.cxx \
WOKUtils_SearchIterator.cxx \
WOKUtils_SearchList.cxx \
WOKUtils_SequenceNodeOfSequenceOfParamItem_0.cxx \
WOKUtils_SequenceNodeOfSequenceOfPath_0.cxx \
WOKUtils_SequenceOfParamItem_0.cxx \
WOKUtils_SequenceOfPath_0.cxx \
WOKUtils_Shell.cxx \
WOKUtils_ShellManager.cxx \
WOKUtils_Trigger.cxx \
WOKernel_Array1OfHSequenceOfHAsciiString_0.cxx \
WOKernel_BaseEntity.cxx \
WOKernel_BaseEntityHasher.cxx \
WOKernel_ClientIterator.cxx \
WOKernel_DBMSystem.cxx \
WOKernel_DataMapIteratorOfDataMapOfFileTypeBase_0.cxx \
WOKernel_DataMapIteratorOfDataMapOfFileType_0.cxx \
WOKernel_DataMapIteratorOfDataMapOfHAsciiStringOfDevUnit_0.cxx \
WOKernel_DataMapIteratorOfDataMapOfHAsciiStringOfFactory_0.cxx \
WOKernel_DataMapIteratorOfDataMapOfHAsciiStringOfFile_0.cxx \
WOKernel_DataMapIteratorOfDataMapOfHAsciiStringOfParcel_0.cxx \
WOKernel_DataMapIteratorOfDataMapOfHAsciiStringOfWarehouse_0.cxx \
WOKernel_DataMapIteratorOfDataMapOfHAsciiStringOfWorkbench_0.cxx \
WOKernel_DataMapIteratorOfDataMapOfHAsciiStringOfWorkshop_0.cxx \
WOKernel_DataMapOfFileTypeBase_0.cxx \
WOKernel_DataMapOfFileType_0.cxx \
WOKernel_DataMapOfHAsciiStringOfDevUnit_0.cxx \
WOKernel_DataMapOfHAsciiStringOfFactory_0.cxx \
WOKernel_DataMapOfHAsciiStringOfFile_0.cxx \
WOKernel_DataMapOfHAsciiStringOfParcel_0.cxx \
WOKernel_DataMapOfHAsciiStringOfWarehouse_0.cxx \
WOKernel_DataMapOfHAsciiStringOfWorkbench_0.cxx \
WOKernel_DataMapOfHAsciiStringOfWorkshop_0.cxx \
WOKernel_DevUnit.cxx \
WOKernel_Entity.cxx \
WOKernel_EntityIterator.cxx \
WOKernel_Factory.cxx \
WOKernel_File.cxx \
WOKernel_FileLocatorHasher.cxx \
WOKernel_FileType.cxx \
WOKernel_FileTypeBase.cxx \
WOKernel_FileTypeHasher.cxx \
WOKernel_FileTypeKeyWords.cxx \
WOKernel_GlobalFileTypeBase.cxx \
WOKernel_HAsciiStringHasher.cxx \
WOKernel_HSequenceOfDBMSID_0.cxx \
WOKernel_HSequenceOfFile_0.cxx \
WOKernel_HSequenceOfStationID_0.cxx \
WOKernel_ImplDepIterator.cxx \
WOKernel_IndexedDataMapNodeOfSCMapOfSortedClientsFromIterator_0.cxx \
WOKernel_IndexedDataMapNodeOfSCMapOfSortedImpldepFromIterator_0.cxx \
WOKernel_Locator.cxx \
WOKernel_Parcel.cxx \
WOKernel_SCMapOfSortedClientsFromIterator_0.cxx \
WOKernel_SCMapOfSortedImpldepFromIterator_0.cxx \
WOKernel_SequenceNodeOfSequenceOfDBMSID_0.cxx \
WOKernel_SequenceNodeOfSequenceOfFileType_0.cxx \
WOKernel_SequenceNodeOfSequenceOfFile_0.cxx \
WOKernel_SequenceNodeOfSequenceOfSession_0.cxx \
WOKernel_SequenceNodeOfSequenceOfStationID_0.cxx \
WOKernel_SequenceNodeOfSequenceOfUnitTypeDescr_0.cxx \
WOKernel_SequenceOfDBMSID_0.cxx \
WOKernel_SequenceOfFileType_0.cxx \
WOKernel_SequenceOfFile_0.cxx \
WOKernel_SequenceOfSession_0.cxx \
WOKernel_SequenceOfStationID_0.cxx \
WOKernel_SequenceOfUnitTypeDescr_0.cxx \
WOKernel_Session.cxx \
WOKernel_SortedClientsFromIterator_0.cxx \
WOKernel_SortedImpldepFromIterator_0.cxx \
WOKernel_Station.cxx \
WOKernel_UnitGraph.cxx \
WOKernel_UnitNesting.cxx \
WOKernel_UnitTypeBase.cxx \
WOKernel_UnitTypeDescr.cxx \
WOKernel_Warehouse.cxx \
WOKernel_Workbench.cxx \
WOKernel_Workshop.cxx \
lex.DELIVERY.c \
lex.EDL.c

